# Quantopian-for-Crypto-Agents

./: .gitignore  README.md  check_wallets.py  demo_mcp.py  demo_skill.py  llm_generated_strategy.json  ncae_backtest.py  pyproject.toml  run_llm_strategy.py  test_cmc.py
app/: README.md  agent_client.py  main.py
app/api/: routes.py
app/core/: config.py  schemas.py  x402_auth.py
app/quant/: README.md  backtester.py  funding_rate_strategy.py  sdme_engine.py
app/services/: cmc_client.py  cmc_mcp_client.py
bnbsdk_agent/: README.md  client_demo.py  provider_server.py  register_identity.py
