[project]
name = "app"
version = "0.1.0"
description = "NCAE: Sentiment-Divergence Strategy Generator (BNB Hack Track 2)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "httpx>=0.27.0",  # For async CMC API calls and x402 verification
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
