[project]
name = "app"
version = "1.0.0"
description = "NCAE: Strategy-as-a-Service (BNB Hack Track 2 & Special Prizes)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "httpx>=0.27.0",
  "python-dotenv>=1.0",
  "mcp>=1.0.0",
  "bnbagent[server]>=0.1.0",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
